--- a/google-sans/google-sans.css
+++ b/google-sans/google-sans.css
@@ -1,15 +1,17 @@
 @font-face {
     font-family: 'Product Sans Regular';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
+    font-display: swap;
     src: local('Product Sans Regular'), url('ProductSans-Regular.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
     src: local('Product Sans Italic'), url('ProductSans-Italic.woff') format('woff');
 }
 
@@ -17,7 +19,8 @@
 @font-face {
     font-family: 'Product Sans Thin Regular';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 200;
+    font-display: swap;
     src: local('Product Sans Thin Regular'), url('ProductSans-Thin.woff') format('woff');
 }
 
@@ -25,7 +28,8 @@
 @font-face {
     font-family: 'Product Sans Light Regular';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 300;
+    font-display: swap;
     src: local('Product Sans Light Regular'), url('ProductSans-Light.woff') format('woff');
 }
 
@@ -33,7 +37,8 @@
 @font-face {
     font-family: 'Product Sans Medium Regular';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 500;
+    font-display: swap;
     src: local('Product Sans Medium Regular'), url('ProductSans-Medium.woff') format('woff');
 }
 
@@ -41,31 +46,35 @@
 @font-face {
     font-family: 'Product Sans Black Regular';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 900;
+    font-display: swap;
     src: local('Product Sans Black Regular'), url('ProductSans-Black.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Thin Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 200;
+    font-display: swap;
     src: local('Product Sans Thin Italic'), url('ProductSans-ThinItalic.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Light Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 300;
+    font-display: swap;
     src: local('Product Sans Light Italic'), url('ProductSans-LightItalic.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Medium Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
     src: local('Product Sans Medium Italic'), url('ProductSans-MediumItalic.woff') format('woff');
 }
 
@@ -73,22 +82,25 @@
 @font-face {
     font-family: 'Product Sans Bold';
     font-style: normal;
-    font-weight: normal;
+    font-weight: 700;
+    font-display: swap;
     src: local('Product Sans Bold'), url('ProductSans-Bold.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Bold Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
     src: local('Product Sans Bold Italic'), url('ProductSans-BoldItalic.woff') format('woff');
 }
 
 
 @font-face {
     font-family: 'Product Sans Black Italic';
-    font-style: normal;
-    font-weight: normal;
+    font-style: italic;
+    font-weight: 900;
+    font-display: swap;
     src: local('Product Sans Black Italic'), url('ProductSans-BlackItalic.woff') format('woff');
 }
